RESOLVED FIXED193744
ARM64E should not ENABLE(SEPARATED_WX_HEAP).
https://bugs.webkit.org/show_bug.cgi?id=193744
Summary ARM64E should not ENABLE(SEPARATED_WX_HEAP).
Mark Lam
Reported 2019-01-23 16:08:58 PST
Attachments
proposed patch. (5.48 KB, patch)
2019-01-23 16:12 PST, Mark Lam
saam: review+
Mark Lam
Comment 1 2019-01-23 16:12:29 PST
Created attachment 359968 [details] proposed patch.
Mark Lam
Comment 2 2019-01-23 17:18:43 PST
Thanks for the review. Landed in r240370: <http://trac.webkit.org/r240370>.
Note You need to log in before you can comment on or make changes to this bug.