ARM64E should not ENABLE(SEPARATED_WX_HEAP). https://bugs.webkit.org/show_bug.cgi?id=193744 <rdar://problem/46262952>

Reviewed by Saam Barati.

Source/JavaScriptCore:

* assembler/LinkBuffer.cpp:
(JSC::LinkBuffer::copyCompactAndLinkCode):

Source/WTF:

* wtf/Platform.h:



Canonical link: https://commits.webkit.org/208267@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240370 268f45cc-cd09-0410-ab3c-d52691b4dbfc